fix bug: navbar not stretching

--- a/style.css
+++ b/style.css
@@ -53,7 +53,6 @@ nav {
 }
 
 .logo {
-  margin-left: 100px;
   margin-top: -20px;
 }
 
@@ -64,7 +63,7 @@ a.logo {
 .f {
   position: absolute;
   top: 62px;
-  left: 125px;
+  left: 25px;
   z-index: 1;
   font-family: "Roboto";
   font-weight: 500;
